INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_EXECUTABLE(restsrv main.cc authdb.cc)
TARGET_LINK_LIBRARIES(
  restsrv
  ${CMAKE_THREAD_LIBS_INIT}
  ${Boost_REGEX_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
  ${OPENSSL_SSL_LIBRARY}
  ${OPENSSL_CRYPTO_LIBRARY}
  ${CMAKE_DL_LIBS}
  ${CONAN_LIBS_CPPURI}
  ${CONAN_LIBS_FMT}
  ${CONAN_LIBS_SPDLOG}
  ${CONAN_LIBS_TOKENGOV}
  ${CONAN_LIBS_DBCPP}
)

SET_TARGET_PROPERTIES(
  restsrv PROPERTIES INSTALL_RPATH
                     "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
)

INSTALL(TARGETS restsrv DESTINATION bin)
