HDRGEN(FILENAME "${CMAKE_CURRENT_SOURCE_DIR}/ratelimit-1.sql" #
       HEADER "${CMAKE_CURRENT_BINARY_DIR}/ratelimit-1.h"
)

HDRGEN(FILENAME "${CMAKE_CURRENT_SOURCE_DIR}/ratelimit-2.sql" #
       HEADER "${CMAKE_CURRENT_BINARY_DIR}/ratelimit-2.h"
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_EXECUTABLE(restsrv main.cc authdb.cc)
TARGET_LINK_LIBRARIES(
  restsrv
  ${CMAKE_THREAD_LIBS_INIT}
  ${Boost_REGEX_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
  ${OPENSSL_SSL_LIBRARY}
  ${OPENSSL_CRYPTO_LIBRARY}
  ${CMAKE_DL_LIBS}
  ${CONAN_LIBS_CPPURI}
  ${CONAN_LIBS_FMT}
  ${CONAN_LIBS_SPDLOG}
  ${CONAN_LIBS_TOKENGOV}
  ${CONAN_LIBS_DBCPP}
  ${CONAN_LIBS_PROMETHEUS-CPP}
)

TARGET_COMPILE_DEFINITIONS(
  restsrv PRIVATE PROJECT_NAME="${PROJECT_NAME}" #
                  PROJECT_VERSION="${PROJECT_VERSION}" #
)

IF(COMMIT)
  TARGET_COMPILE_DEFINITIONS(restsrv PRIVATE COMMIT="${COMMIT}")
ENDIF()

SET_TARGET_PROPERTIES(
  restsrv PROPERTIES INSTALL_RPATH
                     "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
)

INSTALL(TARGETS restsrv DESTINATION bin)
